compile_errors.txt
To honour the JVM settings for this build a single-use Daemon process will be forked. For more on this, please refer to https://docs.gradle.org/8.11.1/userguide/gradle_daemon.html#sec:disabling_the_daemon in the Gradle documentation.
Daemon will be stopped at the end of the build 
> Task :app:checkKotlinGradlePluginConfigurationErrors SKIPPED
> Task :app:preBuild UP-TO-DATE
> Task :app:preDebugBuild UP-TO-DATE
> Task :app:checkDebugAarMetadata UP-TO-DATE
> Task :app:generateDebugResValues UP-TO-DATE
> Task :app:mapDebugSourceSetPaths UP-TO-DATE
> Task :app:generateDebugResources UP-TO-DATE
> Task :app:mergeDebugResources UP-TO-DATE
> Task :app:packageDebugResources UP-TO-DATE
> Task :app:parseDebugLocalResources UP-TO-DATE
> Task :app:createDebugCompatibleScreenManifests UP-TO-DATE
> Task :app:extractDeepLinksDebug UP-TO-DATE
> Task :app:processDebugMainManifest UP-TO-DATE
> Task :app:processDebugManifest UP-TO-DATE
> Task :app:processDebugManifestForPackage UP-TO-DATE
> Task :app:processDebugResources UP-TO-DATE
> Task :app:kaptGenerateStubsDebugKotlin UP-TO-DATE

> Task :app:kaptDebugKotlin
C:\Users\91620\MaterialBox\app\build\tmp\kapt3\stubs\debug\com\rajveer\materialbox\data\entity\Topic.java:5: warning: subjectId column references a foreign key but it is not part of an index. This may trigger full table scans whenever parent table is modified so you are highly advised to create an index that covers this column.
public final class Topic {
             ^
C:\Users\91620\MaterialBox\app\build\tmp\kapt3\stubs\debug\com\rajveer\materialbox\data\entity\Material.java:5: warning: topicId column references a foreign key but it is not part of an index. This may trigger full table scans whenever parent table is modified so you are highly advised to create an index that covers this column.
public final class Material {
             ^
C:\Users\91620\MaterialBox\app\build\tmp\kapt3\stubs\debug\com\rajveer\materialbox\data\entity\YoutubeFeed.java:5: warning: subjectId column references a foreign key but it is not part of an index. This may trigger full table scans whenever parent table is modified so you are highly advised to create an index that covers this column.
public final class YoutubeFeed {
             ^
C:\Users\91620\MaterialBox\app\build\tmp\kapt3\stubs\debug\com\rajveer\materialbox\data\dao\WatchedVideoDao.java:12: error: Not sure how to convert a Cursor to this method's return type (kotlinx.coroutines.flow.Flow<java.util.Set<java.lang.String>>).
    public abstract kotlinx.coroutines.flow.Flow<java.util.Set<java.lang.String>> getAllWatchedUrls();
                                                                                  ^

> Task :app:kaptDebugKotlin FAILED

FAILURE: Build failed with an exception.

* What went wrong:
Execution failed for task ':app:kaptDebugKotlin'.
> A failure occurred while executing org.jetbrains.kotlin.gradle.internal.KaptWithoutKotlincTask$KaptExecutionWorkAction

* Try:
> Run with --stacktrace option to get the stack trace.
> Run with --info or --debug option to get more log output.
> Run with --scan to get full insights.
> Get more help at https://help.gradle.org.

BUILD FAILED in 44s
15 actionable tasks: 1 executed, 14 up-to-date
